force-app/main/default/objects/TIG_Entity__c/TIG_Entity__c.object-meta.xml
<CustomObject>
    <label>TIG Entity</label>
    <nameField>
        <label>TIG Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIG Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>