force-app/main/default/objects/TIG_Entity__c/fields/BSB__c.field-meta.xml
<CustomField>
    <fullName>BSB__c</fullName>
    <label>BSB</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>