force-app/main/default/objects/TIG_Entity__c/fields/Email_Address_for_Remittance__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_for_Remittance__c</fullName>
    <label>Email Address for Remittance</label>
    <required>true</required>
    <type>Email</type>
</CustomField>