force-app/main/default/objects/TIG_Entity__c/fields/Email_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Contact__c</fullName>
    <label>Email for Contact</label>
    <required>true</required>
    <type>Email</type>
</CustomField>