force-app/main/default/objects/TIG_Entity__c/fields/Last_Generated_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Generated_Invoice_Number__c</fullName>
    <label>Last Generated Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>