force-app/main/default/objects/TIG_Entity__c/fields/LUT_Bond_No__c.field-meta.xml
<CustomField>
    <fullName>LUT_Bond_No__c</fullName>
    <label>LUT/Bond No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>