force-app/main/default/objects/TIG_Entity__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>