force-app/main/default/objects/TIG_Entity__c/fields/State1__c.field-meta.xml
<CustomField>
    <fullName>State1__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>