force-app/main/default/objects/TIG_Entity__c/fields/Swift__c.field-meta.xml
<CustomField>
    <fullName>Swift__c</fullName>
    <label>Swift</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>