force-app/main/default/objects/TIG_Entity__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>