force-app/main/default/objects/TIG_Entity__c/fields/Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Name__c</fullName>
    <label>Tax Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>