force-app/main/default/objects/TIG_Entity__c/fields/TIG_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>TIG_Entity_Code__c</fullName>
    <description>will hold TIG 3 digits code</description>
    <label>TIG Entity Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>